# nanobot

./: Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
mike/: __init__.py  app.py  bootstrap.py  bus.py  common.py  config.py  custom_provider.py  helpers.py  llm.py  provider.py  skills.py  types.py
mike/agent/: __init__.py  loop.py
mike/chat/: __init__.py  history.py  models.py  prompts.py  reasoning.py
mike/memory/: __init__.py  archive.py  search.py
mike/opencode/: __init__.py  client.py  models.py  permissions.py  runner.py  search.py  server.py
mike/resources/deep-research/: SKILL.md
mike/storage/: __init__.py  chats.py  files.py  tasks.py
mike/tasks/: __init__.py  manager.py  research.py
mike/telegram/: __init__.py  bot.py  commands.py  render.py
mike/tools/: __init__.py  base.py  delegate.py  filesystem.py  history.py  memory.py  message.py  registry.py  research.py  shell.py  web.py
nanobot/: models_config.py  opencode_client.py
nanobot/agent/: context.py  loop.py  skills.py  subagent.py
nanobot/agent/tools/: shell.py  spawn.py
nanobot/channels/: telegram.py
nanobot/cli/: commands.py
nanobot/config/: schema.py
nanobot/providers/: azure_openai_provider.py  base.py  custom_provider.py  litellm_provider.py  openai_codex_provider.py
nanobot/research/: manager.py
nanobot/skills/deep-research/: SKILL.md
tests/: test_commands.py  test_context_prompt_cache.py  test_opencode_client.py  test_restart_command.py  test_subagent_opencode.py  test_task_cancel.py  test_telegram_commands.py  test_tool_validation.py
tests/mike/: test_archive.py  test_config.py  test_memory_history.py  test_models.py
