[project]
name = "mike-bot"
version = "0.1.0"
description = "Mike personal assistant bot"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "mike contributors"}
]
keywords = ["ai", "assistant", "telegram", "opencode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "python-telegram-bot[socks]>=22.6,<23.0",
    "json-repair>=0.57.0,<1.0.0",
    "tiktoken>=0.12.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mike = "mike.app:main"
nanobot = "mike.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mike"]

[tool.hatch.build.targets.wheel.sources]
"mike" = "mike"

# Include non-Python files in skills and templates
[tool.hatch.build]
include = [
    "mike/**/*.py",
    "mike/resources/**/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "mike/",
    "README.md",
    "LICENSE",
    "Dockerfile",
    "docker-compose.yml",
    "SECURITY.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
